Update to Java 21
- Update github actions and Jenkins to use Java 21 for the build itself.
- Update all BREEs and .classpath files to Java 21.
- Update all product's specific -Dosgi.requiredJavaVersion=21.
- Update all product <vm> JRE_CONTAINERs to JavaSE-21.
- Invoke the aggregator with Java 21.
- Update the setp to configure a Java 21 JRE and populate JustJ Java 21
into the target platform and in the string substitutions.
- Eliminate avoidable warnings in org.eclipse.epp.package.common.

https://github.com/eclipse-packaging/packages/issues/130